feat: add jSpecify nullability checks